# sida

./: .env.example  .gitattributes  .gitignore  ANALISE_REQUIREMENTS.md  Dockerfile  OTIMIZACOES_OULAD.md  README.md  README_PICKLES.md  SETUP.md  analise_faltas_vs_desempenho.py  app.py  check_environment.py  config.py  data.py  docker-compose.yml  env.example  gerar_dataset_unificado.py  gerar_pickle_oulad.py  ida.ipynb  install.sh  main.py  manter_pickles.py  models.py  oulad.pkl  oulad_data.pkl  oulad_dataframe.pkl  output.csv  output1.csv  prerequisite_issues.py  pyproject.toml  pyvenv.cfg  requirements.txt  run.py  setup.py  setup_envirinment.sh  sida.sh  template_unificado_features.xlsx  uci.pkl  uci_dataframe.pkl  unified_dataset.csv  (+2 more)
.cursor/plans/: unify-three-datasets-458b7da2.plan.md  unify-uci-oulad-templates-21270d2e.plan.md
.devcontainer/: devcontainer.json
app/: app.py  config.py  main.py  output.py  prerequisite_issues.py
data/: .~lock.planilha_exemplo_500.xlsx#  output.csv  output1.csv  planilha_exemplo_500.xlsx
templates/: base.html  dashboard.html  home.html
webapp/: home.py  home_1.py  oulad.pkl  uci.pkl  utilidades.py
webapp/pages/: 1_Painel Analítico.py  1_UCI.py  1_dashboard.py  1_uci.py  2_OULAD.py  2_oulad.py  3_Análise Exploratória_Autosserviço.py  3_analisador.py  4_pygwalker.py  5_pandas_profiling.py
webapp/src/: __init__.py  carregar_dados.py  openai_interpreter.py  preencher_planilha_500.py  unificar_datasets.py  utilidades.py  vizualizacoes.py
webapp/tests/: test_carregar_dados.py
