[project]
name = "sida"
version = "0.1.1"
description = "Sistema de Identificação de Dificuldades de Aprendizagem (SIDA)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"streamlit>=1.52.0",
"pandas>=1.5.0",
"numpy>=1.24.0",
"matplotlib>=3.6.0",
"seaborn>=0.12.0",
"scikit-learn>=1.3.0",
"scipy>=1.10.0",
"openai>=1.48.0",
"openpyxl>=3.1.0",
"plotly>=5.15.0",
"missingno>=0.5.0",
"pygwalker>=0.3.0",
"tabula-py>=2.7.0",
"pytest>=7.0.0",
"pathlib2>=2.3.0",
]
